--- a/ownable/Cargo.toml
+++ b/ownable/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["rust-patterns", "no-std"]
 
 [dependencies]
 ownable-macro = "0.6"
+beef = { git = "https://github.com/maciejhirsz/beef.git", rev = "1cc0a4a", optional = true }
 
 [features]
 default = ['std']
