--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -75,7 +75,7 @@ jobs:
     # https://docs.github.com/en/actions/learn-github-actions/contexts#context-availability
     strategy:
       matrix:
-        msrv: [1.56.1] # 2021 edition requires 1.56
+        msrv: [1.58.1] # 2021 edition requires 1.56; implicit named arguments requires 1.58
     name: ubuntu / ${{ matrix.msrv }}
     steps:
       - uses: actions/checkout@v3
@@ -87,3 +87,16 @@ jobs:
           toolchain: ${{ matrix.msrv }}
       - name: cargo +${{ matrix.msrv }} check
         run: cargo check
+  readme:
+    runs-on: ubuntu-latest
+    name: stable / readme
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+      - name: Install stable
+        uses: dtolnay/rust-toolchain@stable
+      - name: Install cargo-rdme
+        run: cargo install cargo-rdme
+      - name: cargo rdme
+        run: cargo rdme --check
