--- a/ownable/Cargo.toml
+++ b/ownable/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["into_owned", "derive", "owned", "no_std"]
 categories = ["rust-patterns", "no-std"]
 
 [dependencies]
-ownable-macro = "0.6"
+ownable-macro = { version = "0.6", path = "../ownable-macro" }
 
 [features]
 default = ['std']
