--- a/ownable-macro/Cargo.toml
+++ b/ownable-macro/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/alexkazik/ownable"
 license = "MIT OR Apache-2.0"
 keywords = []
 categories = []
+rust-version = "1.63.0"
 
 [dependencies]
 darling = "0.21.3"
